<resources>
    <string name="custom">通用</string>
    <string name="return_previous">返回</string>
    <string name="search_query">查询</string>
    <string name="please_wait">请稍等…</string>
    <string name="ok">确认</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="permission_denied">权限被拒绝！</string>
    <string name="recognize_settings">参数设置</string>
    <string name="notice">提示</string>
    <string name="stopped">已停止</string>
    <string name="stop">停止</string>
    <string name="menu">菜单</string>
    <string name="no_data">暂无数据</string>
    <string name="search">搜索</string>
    <string name="lend_total">借物总数</string>
    <string name="beyond_things">超期未还</string>
    <string name="default_num">0</string>
    <string name="exit_text">退出</string>
    <string name="space_line">--</string>
    <string name="category_index_hint">请输入索引号</string>
    <string name="category_name_hint">请输入类别名称</string>
    <string name="category_unit_hint">请输入单位</string>
    <string name="add">添加</string>
    <string name="index">索引序号</string>
    <string name="category">类型名称</string>
    <string name="unit">类型单位</string>
    <string name="operation">操作区</string>
    <string name="action_type">操作行为</string>
    <string name="goods_name">物品名称</string>
    <string name="input_goods_name">请输入物品名称</string>
    <string name="input_rfid_number">请输入物品rfid</string>
    <string name="overdue">是否超期</string>
    <string name="company_name">生产厂家</string>
    <string name="use_life">使用寿命</string>
    <string name="lend_start_time">借出起始时间</string>
    <string name="return_end_time">归还截止时间</string>
    <string name="lend_long_limit">借出时长(天)</string>
    <string name="if_check">入柜是否检查</string>
    <string name="belong_cabinet">归属柜子：</string>
    <string name="belong_cabinet_no">归属柜子</string>
    <string name="actual_cabinet">实际归属：</string>
    <string name="actual_cabinet_no">实际归属</string>
    <string name="important">*</string>
    <string name="borrow_item">开锁</string>
    <string name="smart_lock">智能锁参数</string>
    <string name="smart_tag">智能标签参数</string>
    <string name="serial_number">串口选择</string>
    <string name="board_number">波特率选择</string>
    <string name="current_info">当前挂账信息</string>
    <string name="lend_total_info">借用统计</string>
    <string name="return_total_info">归还统计</string>
    <string name="wrong_total_info">放错信息</string>
    <string name="detect_info">检测</string>
    <string name="nothing_detect">无</string>
    <string name="count_three_time">智能标签检测器未联通或者出现故障，请注意……</string>
    <string name="smart_meter">智能电表</string>
    <string name="total_count_things">物品总计</string>
    <string name="image_text">图片</string>
    <string name="date">日期</string>
    <string name="ip_address">IP 地址</string>
    <string name="port_num">端口</string>
    <string name="clear">清空</string>
    <string name="port_data">导入</string>
    <string name="page_readme">简介</string>
    <string name="page_ir_face_recognize">人脸识别</string>
    <string name="page_liveness_detect">活体检测</string>
    <string name="page_single_image">人脸属性</string>
    <string name="page_face_compare">图片1:1比对</string>
    <string name="page_face_manage">人脸管理</string>
    <string name="page_settings">参数设置</string>
    <string name="page_debug">异常分析</string>
    <string name="page_calculate_data_length">计算数据长度</string>
    <string name="home_title">智能工具车</string>
    <string name="accessibility_icon_description">管理员</string>
    <string name="total_things">物品总计</string>
    <string name="storage_things">库存</string>
    <string name="lend_things">借出</string>
    <string name="system_notify">系统通知</string>
    <string name="over_date">超期未还</string>
    <string name="item_time">2024–06–20</string>
    <string name="item_analysis">统计</string>
    <string name="first_box">1号柜</string>
    <string name="second_box">2号柜</string>
    <string name="third_box">3号柜</string>
    <string name="fourth_box">4号柜</string>
    <string name="fifth_box">5号柜</string>
    <string name="detail">详情</string>
    <string name="edit">修改</string>
    <string name="register_select">登录选择</string>
    <string name="face_login">人脸登录</string>
    <string name="password_login">密码登录</string>
    <string name="card_login">刷卡登录</string>
    <string name="user_control">用户管理</string>
    <string name="active_face">激活刷脸组件</string>
    <string name="register_face">注册人脸</string>
    <string name="face_control">人脸管理</string>
    <string name="sys_settings">管理设置</string>
    <string name="about_us">关于我们</string>
    <string name="user_detail">用户详情</string>
    <string name="if_enabled">是否启用</string>
    <string name="banded_range">禁用时间范围：</string>
    <string name="start_time">开始时间</string>
    <string name="end_time">结束时间</string>
    <string name="cabinet_right">权限：</string>
    <string name="delete_button">删除</string>
    <string name="save_button">保存</string>
    <string name="login">登录</string>
    <string name="account">用户名</string>
    <string name="password">密码</string>
    <string name="user_login">用户登录</string>
    <string name="login_title">登录</string>
    <string name="dump_error_cannot_detect_faces">人脸检测异常</string>
    <string name="dump_liveness_info">活体识别数据</string>
    <string name="dump_extract_failed">特征提取异常</string>
    <string name="dump_recognize_failed">人脸识别失败</string>
    <string name="dump_performance_info">识别耗时数据</string>
    <string name="tip_no_registered_face">未注册人脸，请点击右下角图标进行注册，\n默认待批量注册图存放目录：%s</string>
    <string name="please_put_photos">请将需要注册的人脸照片放在\n%s\n目录下</string>
    <string name="label_face_id">id: %d</string>
    <string name="dialog_title_change_name">修改名称</string>
    <string name="name_should_not_be_empty">名称不可为空</string>
    <string name="register_success">注册成功</string>
    <string name="register_failed">注册失败</string>
    <string name="face_cleared">人脸库已清空</string>
    <string name="face_deleted">已删除</string>
    <string name="register_select_from_album">选择照片注册</string>
    <string name="batch_register_from_file">本地批量注册</string>
    <string name="clear_all_faces">清空所有人脸</string>
    <string name="registering_please_wait">注册中，请稍等</string>
    <string name="register_progress">当前/失败/所有：%d / %d / %d</string>
    <string name="add_name">添加用户</string>
    <string name="cabinet_0_permission">管理员权限</string>
    <string name="cabinet_1_permission">1号柜权限</string>
    <string name="cabinet_2_permission">2号柜权限</string>
    <string name="cabinet_3_permission">3号柜权限</string>
    <string name="cabinet_4_permission">4号柜权限</string>
    <string name="cabinet_5_permission">5号柜权限</string>
    <string name="input_name">姓名</string>
    <string name="input_part">部门</string>
    <string name="input_phone">手机</string>
    <string name="input_password">密码</string>
    <string name="input_cardId">卡号</string>
    <string name="card_login_in">刷卡登录</string>
    <string name="read_card">读卡</string>
    <string name="save_user">注册</string>
    <string name="exit_register">退出</string>
    <string name="config_settings">管理配置</string>
    <string name="config_select">配置选择</string>
    <string name="items_information">台账信息</string>
    <string name="goods_control">物品管理</string>
    <string name="clarify_control">类别管理</string>
    <string name="parameter_control">参数管理</string>
    <string name="active_engine">激活引擎</string>
    <string name="active_success">激活引擎成功</string>
    <string name="already_activated">已激活</string>
    <string name="active_key_activated">该激活码已被其他设备使用</string>
    <string name="dont_need_active_anymore">引擎已激活，无需再次激活</string>
    <string name="active_failed">引擎激活失败，错误码：%d， 错误码常量名：%s</string>
    <string name="not_activated">SDK未激活</string>
    <string name="app_id">appId</string>
    <string name="sdk_key">sdkKey</string>
    <string name="active_key">activeKey</string>
    <string name="active_online">在线激活</string>
    <string name="active_offline">离线激活</string>
    <string name="copy_device_finger">复制指纹</string>
    <string name="description_copy_device_finger">将设备指纹复制到剪贴板，可存储到本地文件，上传到开放平台生成离线授权文件用于离线激活</string>
    <string name="device_info_copied">设备指纹：\n%s\n已复制</string>
    <string name="get_device_finger_failed">获取设备指纹失败，错误码：%d</string>
    <string name="notice_please_active_before_use">SDK未激活，请激活后使用！</string>
    <string name="read_local_config_and_active">本地激活</string>
    <string name="notice_active_online">联网环境下，支持在线激活，可读取本地配置文件，本地配置文件路径为：/sdcard/activeConfig.txt，格式：\nAPP_ID:XXXXXXXXXXXXXXX\nSDK_KEY:XXXXXXXXXXXXXXX\nACTIVE_KEY:XXXX-XXXX-XXXX-XXXX</string>
    <string name="notice_active_offline">无网络环境下，支持离线激活，请将设备授权文件放置在sdcard根目录下，命名为%s</string>
    <string name="active_file_name">active_result.dat</string>
    <string name="read_config_failed">读取本地文件失败，请检查格式</string>
    <string name="register">注册</string>
    <string name="switch_camera">切换相机</string>
    <string name="switch_camera_failed">切换相机失败</string>
    <string name="recognize_failed_notice">未通过:%s</string>
    <string name="recognize_success_notice">通过:%s</string>
    <string name="low_confidence_level">人脸置信度低</string>
    <string name="specific_engine_init_failed">%s 初始化失败，错误码：%d\n错误码常量名：%s</string>
    <string name="notice_change_detect_degree">相机已切换，若无法检测到人脸，需要在配置界面修改视频模式人脸检测角度</string>
    <string name="liveness_detect">活体检测</string>
    <string name="camera_rgb">RGB CAMERA</string>
    <string name="camera_ir">IR CAMERA</string>
    <string name="camera_rgb_preview_size">RGB CAMERA\n%dx%d</string>
    <string name="camera_ir_preview_size">IR CAMERA\n%dx%d</string>
    <string name="camera_error_notice">\n可能的原因：该设备不支持同时打开两个摄像头</string>
    <string name="draw_ir_rect_mirror_horizontal">IR人脸框水平镜像绘制</string>
    <string name="draw_ir_rect_mirror_vertical">IR人脸框垂直镜像绘制</string>
    <string name="preference_switch_camera">switch_camera</string>
    <string name="preference_dual_camera_offset_horizontal">dual_camera_offset_horizontal</string>
    <string name="preference_dual_camera_offset_vertical">dual_camera_offset_vertical</string>
    <string name="preference_draw_rgb_rect_horizontal_mirror">draw_rgb_rect_horizontal_mirror</string>
    <string name="preference_draw_rgb_rect_vertical_mirror">draw_rgb_rect_vertical_mirror</string>
    <string name="preference_draw_ir_rect_horizontal_mirror">draw_ir_rect_horizontal_mirror</string>
    <string name="preference_draw_ir_rect_vertical_mirror">draw_ir_rect_vertical_mirror</string>
    <string name="preference_rgb_preview_horizontal_mirror">rgb_preview_horizontal_mirror</string>
    <string name="preference_ir_preview_horizontal_mirror">ir_preview_horizontal_mirror</string>
    <string name="preference_rgb_camera_rotation">rgb_camera_rotation</string>
    <string name="preference_ir_camera_rotation">ir_camera_rotation</string>
    <string name="preference_liveness_detect_type">liveness_detect_type</string>
    <string name="preference_rgb_liveness_detect">rgb_liveness_detect</string>
    <string name="preference_ir_liveness_detect">ir_liveness_detect</string>
    <string name="preference_recognize_keep_max_face">keep_max_face</string>
    <string name="preference_recognize_limit_recognize_area">limit_recognize_area</string>
    <string name="preference_recognize_max_detect_num">max_detect_num</string>
    <string name="preference_recognize_scale_value">scale_value</string>
    <string name="preference_choose_detect_degree">choose_detect_degree</string>
    <string name="preference_track_face_count">track_face_count</string>
    <string name="preference_recognize_threshold">recognize_threshold</string>
    <string name="preference_shelter_threshold">shelter_threshold</string>
    <string name="preference_eye_open_threshold">eye_open_threshold</string>
    <string name="preference_mouth_close_threshold">mouth_close_threshold</string>
    <string name="preference_wear_glasses_threshold">wear_glasses_threshold</string>
    <string name="preference_recognize_face_size_limit">recognize_face_size_limit</string>
</resources>