<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:orientation="vertical">

        <!-- 顶部通栏 -->
        <RelativeLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/colorPrimary"
            android:padding="16dp">

            <!-- 返回按钮 -->
            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:contentDescription="@string/return_previous"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:padding="8dp"
                android:scaleType="fitCenter"
                android:src="@mipmap/back"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/user_detail"
                android:textColor="@android:color/white"
                android:textSize="20sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <ImageView
                android:id="@+id/userImageView"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/custom"
                android:src="@mipmap/user"
                tools:ignore="ImageContrastCheck" />

            <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/input_name"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorSecondary"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/departmentEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="department"
                android:hint="@string/input_part"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorSecondary"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/phoneEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="phone"
                android:hint="@string/input_phone"
                android:inputType="phone"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorSecondary"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="password"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorSecondary"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/cardIdEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:hint="@string/input_cardId"
                android:inputType="textLongMessage"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorSecondary"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/startTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/start_time"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorSecondary"
                tools:ignore="VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/endTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/end_time"
                android:minHeight="48dp"
                android:textColor="@color/white"
                android:textColorHint="@color/colorSecondary"
                tools:ignore="VisualLintTextFieldSize" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/enabledSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/if_enabled"
                android:textColor="@color/colorSecondary"
                app:thumbTint="@color/purple_500"
                app:trackTint="@drawable/switch_track_color"
                tools:ignore="VisualLintButtonSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:gravity="center_vertical"
                    android:text="@string/cabinet_right"
                    android:textColor="@color/colorSecondary" />

                <LinearLayout
                    android:id="@+id/cabinetPermissionsLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/delete_button"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:background="@color/colorPrimary"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/save_button"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>