<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginSelectActivity">

    <!-- 设置背景图片 -->
    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/config_settings"
        android:src="@mipmap/background" />

    <!-- 半透明背景覆盖层 -->
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000" />

    <!-- 顶部通栏 -->
    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:layout_alignParentTop="true">

        <!-- 返回按钮 -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@mipmap/back"
            android:contentDescription="@string/return_previous"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/config_select"
            android:textSize="20sp"
            android:textColor="@android:color/white" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:id="@+id/itemInformationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/items_information"
            android:minWidth="250dp"
            android:padding="20dp"
            android:textSize="16sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/goodsControlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/goods_control"
            android:minWidth="250dp"
            android:padding="20dp"
            android:textSize="16sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/clarifyControlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/clarify_control"
            android:minWidth="250dp"
            android:padding="20dp"
            android:textSize="16sp"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/parameterControlButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/parameter_control"
            android:minWidth="250dp"
            android:padding="20dp"
            android:textSize="16sp"
            app:cornerRadius="10dp" />


        <Button
            android:id="@+id/closeApplicationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="关闭应用"
            android:minWidth="250dp"
            android:padding="20dp"
            android:textSize="16sp"
            app:cornerRadius="10dp" />

    </LinearLayout>
</RelativeLayout>
